Changed UI and Added location and home partial view with main.js
Changed UI and Added location and home partial view with main.js

--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -37,9 +37,8 @@ body, .form-control{
 
 .generic-container {
   float:left;
-  width:70%;
-  margin-left: 20px;
-  margin-top: 20px;
+  width:92%;
+  margin-left: 4%;
   margin-bottom: 20px;
   padding: 20px;
   background-color: #EAE7E7;
